--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^3.7.15",
+    "nodemailer": "^7.0.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
@@ -31,6 +32,7 @@
     "@tailwindcss/postcss": "^4.0.0",
     "@types/aos": "^3.0.7",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
