--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sustainable_project",
   "version": "1.0.1",
   "private": true,
+  "packageManager": "npm@11.7.0",
   "scripts": {
     "dev": "next dev --port 3001",
     "build": "next build",
